[project]
name = "qha"
version = "1.1.0"
description = "A powerful tool for quasi-harmonic approximation"
authors = [
    {name = "Qi Zhang", email = "singularitti@outlook.com"},
]
dependencies = [
    "lazy-property>=0.0.1",
    "mpmath>=1",
    "pandas>=2",
    "scientific-string>=0.1.0",
    "scipy>=1",
    "text-stream>=0.2.0",
    "pyyaml>=6",
    "matplotlib>=3",
    "numba>=0.58",
    "jax>=0.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GNU General Public License 3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
qha = "qha.cli:main"
